@@ -17,63 +17,37 @@ package no.asgari.civilization.server.action;
 
 import com.google.common.base.Preconditions;
 import com.google.common.base.Strings;
-import com.mongodb.DB;
 import lombok.SneakyThrows;
-import lombok.extern.log4j.Log4j;
+import lombok.extern.slf4j.Slf4j;
 import no.asgari.civilization.server.SheetName;
 import no.asgari.civilization.server.application.CivSingleton;
-import no.asgari.civilization.server.dto.AllTechsDTO;
-import no.asgari.civilization.server.dto.ForgotpassDTO;
-import no.asgari.civilization.server.dto.ItemDTO;
-import no.asgari.civilization.server.dto.MessageDTO;
-import no.asgari.civilization.server.dto.TechDTO;
+import no.asgari.civilization.server.dto.*;
 import no.asgari.civilization.server.email.SendEmail;
-import no.asgari.civilization.server.exception.PlayerExistException;
+import no.asgari.civilization.server.exception.BadRequestException;
+import no.asgari.civilization.server.exception.ForbiddenException;
+import no.asgari.civilization.server.exception.NotFoundException;
+import no.asgari.civilization.server.exception.NotModifiedException;
 import no.asgari.civilization.server.misc.SecurityCheck;
-import no.asgari.civilization.server.model.Civ;
-import no.asgari.civilization.server.model.Draw;
-import no.asgari.civilization.server.model.GameLog;
-import no.asgari.civilization.server.model.Item;
-import no.asgari.civilization.server.model.PBF;
-import no.asgari.civilization.server.model.Player;
-import no.asgari.civilization.server.model.Playerhand;
-import no.asgari.civilization.server.model.SocialPolicy;
-import no.asgari.civilization.server.model.Tech;
-import no.asgari.civilization.server.model.Tradable;
-import no.asgari.civilization.server.model.Unit;
+import no.asgari.civilization.server.model.*;
 import org.apache.commons.codec.digest.DigestUtils;
-import org.mongojack.DBQuery;
-import org.mongojack.JacksonDBCollection;
-import org.mongojack.WriteResult;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
 
-import javax.ws.rs.WebApplicationException;
-import javax.ws.rs.client.Entity;
-import javax.ws.rs.core.Response;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
-import java.util.Base64;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.nio.charset.StandardCharsets;
+import java.util.*;
 import java.util.stream.Collectors;
 
-@Log4j
+@Slf4j
+@Component
 public class PlayerAction extends BaseAction {
-
-    private final JacksonDBCollection<Player, String> playerCollection;
-    private final JacksonDBCollection<PBF, String> pbfCollection;
-    private final JacksonDBCollection<GameLog, String> gameLogCollection;
-
     private final DrawAction drawAction;
 
-    public PlayerAction(DB db) {
-        super(db);
-        this.playerCollection = JacksonDBCollection.wrap(db.getCollection(Player.COL_NAME), Player.class, String.class);
-        this.pbfCollection = JacksonDBCollection.wrap(db.getCollection(PBF.COL_NAME), PBF.class, String.class);
-        this.gameLogCollection = JacksonDBCollection.wrap(db.getCollection(GameLog.COL_NAME), GameLog.class, String.class);
-        this.drawAction = new DrawAction(db);
+    @Autowired
+    public PlayerAction(DrawAction drawAction) {
+        this.drawAction = drawAction;
     }
+
 
     /**
      * Returns a set of all the game ids of player
@@ -95,10 +69,10 @@ public class PlayerAction extends BaseAction {
         Preconditions.checkNotNull(pbfId);
         Preconditions.checkNotNull(techName);
 
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
         if (!SecurityCheck.hasUserAccess(pbf, playerId)) {
             log.error("User with id " + playerId + " has no access to pbf " + pbf.getName());
-            throw new WebApplicationException(Response.Status.FORBIDDEN);
+            throw new ForbiddenException();
         }
 
         Optional<Tech> tech = pbf.getTechs().stream()
@@ -116,7 +90,7 @@ public class PlayerAction extends BaseAction {
         }
         playerhand.getTechsChosen().add(chosenTech);
 
-        pbfCollection.updateById(pbf.getId(), pbf);
+        pbfRepository.save(pbf);
         log.debug("Player " + playerId + " chose tech " + chosenTech.getName());
 
         return super.createLog(chosenTech, pbfId, GameLog.LogType.TECH);
@@ -127,10 +101,10 @@ public class PlayerAction extends BaseAction {
         Preconditions.checkNotNull(pbfId);
         Preconditions.checkNotNull(playerId);
 
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
         if (!SecurityCheck.hasUserAccess(pbf, playerId)) {
             log.error("User with id " + playerId + " has no access to pbf " + pbf.getName());
-            throw new WebApplicationException(Response.Status.FORBIDDEN);
+            throw new ForbiddenException();
         }
 
         Playerhand playerhand = getPlayerhandByPlayerId(playerId, pbf);
@@ -142,7 +116,7 @@ public class PlayerAction extends BaseAction {
             log.error("Could not remove tech " + techName + " from player with id " + playerId + " in pbf " + pbf.getName());
             return false;
         }
-        pbfCollection.updateById(pbf.getId(), pbf);
+        pbfRepository.save(pbf);
 
         super.createLog(techToRemove, pbfId, GameLog.LogType.REMOVED_TECH);
         return true;
@@ -152,7 +126,7 @@ public class PlayerAction extends BaseAction {
         Preconditions.checkNotNull(pbfId);
         Preconditions.checkNotNull(player.getUsername());
 
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
 
         if (pbf.getPlayers().get(0).getPlayernumber() > 0) {
             Playerhand playerhand = pbf.getPlayers().stream().filter(Playerhand::isYourTurn).findFirst().get();
@@ -164,7 +138,7 @@ public class PlayerAction extends BaseAction {
             nextPlayer.setYourTurn(true);
             SendEmail.sendYourTurn(pbf.getName(), nextPlayer.getEmail(), pbf.getId());
 
-            pbfCollection.updateById(pbf.getId(), pbf);
+            pbfRepository.save(pbf);
             return true;
 
         } else {
@@ -186,7 +160,7 @@ public class PlayerAction extends BaseAction {
                     nextPlayer.setYourTurn(true);
                     SendEmail.sendYourTurn(pbf.getName(), nextPlayer.getEmail(), pbf.getId());
 
-                    pbfCollection.updateById(pbf.getId(), pbf);
+                    pbfRepository.save(pbf);
                     return true;
                 }
             }
@@ -209,22 +183,20 @@ public class PlayerAction extends BaseAction {
         Preconditions.checkNotNull(playerId);
 
         //Check if item can be found on the player
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
         Playerhand playerhand = getPlayerhandByPlayerId(playerId, pbf);
 
         if (!SecurityCheck.hasUserAccess(pbf, playerId)) {
             log.error("User with id " + playerId + " has no access to pbf " + pbf.getName());
-            throw new WebApplicationException(Response.Status.FORBIDDEN);
+            throw new ForbiddenException();
         }
 
         List<Item> items = playerhand.getItems();
 
         Optional<SheetName> sheetName = SheetName.find(itemDTO.getSheetName());
-        if (!sheetName.isPresent()) {
+        if (sheetName.isEmpty()) {
             log.error("Cannot find Sheetname " + itemDTO.getSheetName());
-            throw new WebApplicationException(Response.status(Response.Status.BAD_REQUEST)
-                    .entity(Entity.json("{\"msg\": \"Cannot find Sheetname " + itemDTO.getSheetName() + "\"}"))
-                    .build());
+            throw new BadRequestException();
         }
 
         Optional<Item> itemToRevealOptional = items.stream()
@@ -233,7 +205,7 @@ public class PlayerAction extends BaseAction {
                 .filter(Item::isHidden)
                 .findFirst();
 
-        if (!itemToRevealOptional.isPresent()) {
+        if (itemToRevealOptional.isEmpty()) {
             itemToRevealOptional = items.stream()
                     .filter(it -> it.getName().equals(itemDTO.getName()))
                     .filter(it -> it.getSheetName() == sheetName.get())
@@ -241,11 +213,9 @@ public class PlayerAction extends BaseAction {
                     .findFirst();
         }
 
-        if (!itemToRevealOptional.isPresent()) {
+        if (itemToRevealOptional.isEmpty()) {
             log.warn("Item " + itemDTO.getName() + " already revealed");
-            throw new WebApplicationException(Response.status(Response.Status.NOT_MODIFIED)
-                    .entity(Entity.json("{\"msg\": \"Item already revealed\"}"))
-                    .build());
+            throw new NotModifiedException();
         }
 
         boolean isCiv = isCivilization(playerhand, sheetName);
@@ -254,7 +224,7 @@ public class PlayerAction extends BaseAction {
         itemToReveal.setHidden(false);
         if (isCiv) {
             Civ civ = setStartingTech(playerId, playerhand, (Civ) itemToReveal);
-            pbfCollection.updateById(pbf.getId(), pbf);
+            pbfRepository.save(pbf);
             //Create a new log entry
             logAction.createGameLog(itemToReveal, pbf.getId(), GameLog.LogType.REVEAL);
             log.debug("item to be reveal " + itemToReveal);
@@ -271,7 +241,7 @@ public class PlayerAction extends BaseAction {
             }
 
         } else {
-            pbfCollection.updateById(pbf.getId(), pbf);
+            pbfRepository.save(pbf);
             //Create a new log entry
             logAction.createGameLog(itemToReveal, pbf.getId(), GameLog.LogType.REVEAL);
             log.debug("item to be reveal " + itemToReveal);
@@ -302,7 +272,7 @@ public class PlayerAction extends BaseAction {
     }
 
     private void deleteTheOtherCivs(String pbfId, String playerId, Civ civ) {
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
         Playerhand playerhand = getPlayerhandByPlayerId(playerId, pbf);
         Iterator<Item> iterator = playerhand.getItems().iterator();
         boolean deleted = false;
@@ -318,7 +288,7 @@ public class PlayerAction extends BaseAction {
         }
 
         if (deleted) {
-            pbfCollection.updateById(pbf.getId(), pbf);
+            pbfRepository.save(pbf);
         }
     }
 
@@ -334,9 +304,7 @@ public class PlayerAction extends BaseAction {
         if (sheetName.get() == SheetName.CIV) {
             if (playerhand.getCivilization() != null) {
                 log.warn("Cannot choose civilization again");
-                throw new WebApplicationException(Response.status(Response.Status.BAD_REQUEST)
-                        .entity(Entity.json("{\"msg\": \"Civilization already chosen\"}"))
-                        .build());
+                throw new BadRequestException();
             }
             return true;
         }
@@ -396,17 +364,17 @@ public class PlayerAction extends BaseAction {
         Preconditions.checkNotNull(pbfId);
         Preconditions.checkNotNull(playerId);
 
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
 
         if (!SecurityCheck.hasUserAccess(pbf, playerId)) {
             log.error("User with id " + playerId + " has no access to pbf " + pbf.getName());
-            throw new WebApplicationException(Response.Status.FORBIDDEN);
+            throw new ForbiddenException();
         }
 
         Draw<?> draw = gameLog.getDraw();
         if (draw == null || draw.getItem() == null) {
             log.error("Couldn't find tech to reveal");
-            throw new WebApplicationException(Response.Status.NOT_FOUND);
+            throw new NotFoundException();
         }
 
         Item item = draw.getItem();
@@ -416,8 +384,8 @@ public class PlayerAction extends BaseAction {
         Tech tech = playerhand.getTechsChosen().stream().filter(t -> t.getName().equals(item.getName())).findFirst().orElseThrow(PlayerAction::cannotFindItem);
         tech.setHidden(false);
 
-        gameLogCollection.updateById(gameLog.getId(), gameLog);
-        pbfCollection.updateById(pbfId, pbf);
+        gameLogRepository.save(gameLog);
+        pbfRepository.save(pbf);
 
         createLog(item, pbf.getId(), GameLog.LogType.REVEAL, playerId);
     }
@@ -430,7 +398,7 @@ public class PlayerAction extends BaseAction {
      * @return
      */
     public List<Tech> getRemaingTechsForPlayer(String playerId, String pbfId) {
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
 
         Optional<Playerhand> playerhandOptional = pbf.getPlayers().stream()
                 .filter(p -> p.getPlayerId().equals(playerId))
@@ -461,7 +429,7 @@ public class PlayerAction extends BaseAction {
      * @see #checkYourTurn(String, String)
      */
     public boolean isYourTurn(String pbfId, String playerId) {
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
         Playerhand playerhand = getPlayerhandByPlayerId(playerId, pbf);
         return playerhand.isYourTurn();
     }
@@ -478,11 +446,11 @@ public class PlayerAction extends BaseAction {
         Preconditions.checkNotNull(item.getPbfId());
         Preconditions.checkNotNull(item.getOwnerId());
 
-        PBF pbf = pbfCollection.findOneById(item.getPbfId());
+        PBF pbf = pbfRepository.findById(item.getPbfId()).orElseThrow(NotFoundException::new);
         Playerhand fromPlayer = getPlayerhandByPlayerId(playerId, pbf);
         Playerhand toPlayer = getPlayerhandByPlayerId(item.getOwnerId(), pbf);
         Optional<SheetName> dtoSheet = SheetName.find(item.getSheetName());
-        if (!dtoSheet.isPresent()) {
+        if (dtoSheet.isEmpty()) {
             log.error("Couldn't find sheetname " + item.getSheetName());
             throw cannotFindItem();
         }
@@ -515,13 +483,13 @@ public class PlayerAction extends BaseAction {
         toPlayer.getItems().add(itemToTrade);
 
         itemToTrade.setOwnerId(toPlayer.getPlayerId());
-        pbfCollection.updateById(pbf.getId(), pbf);
+        pbfRepository.save(pbf);
         logAction.createTradeGameLog(itemToTrade, pbf.getId(), GameLog.LogType.TRADE_BETWEEN_PLAYERS, fromPlayer.getUsername());
         return true;
     }
 
     public void discardItem(String pbfId, String playerId, ItemDTO itemdto) {
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
 
         Playerhand playerhand = getPlayerhandByPlayerId(playerId, pbf);
 
@@ -552,7 +520,7 @@ public class PlayerAction extends BaseAction {
         if (playerhand.getItems().remove(itemToDeleteOptional.get())) {
             pbf.getDiscardedItems().add(itemToDeleteOptional.get());
             createLog(itemToDelete, pbf.getId(), GameLog.LogType.DISCARD, playerId);
-            pbfCollection.updateById(pbf.getId(), pbf);
+            pbfRepository.save(pbf);
             return;
         }
         log.error("Found the item " + itemToDelete + " , but couldn't delete it for some reason");
@@ -560,14 +528,14 @@ public class PlayerAction extends BaseAction {
     }
 
     public Player getPlayerById(String playerId) {
-        return playerCollection.findOneById(playerId);
+        return playerRepository.findById(playerId).orElseThrow(NotFoundException::new);
     }
 
     public Set<Tech> getPlayersTechs(String pbfId, String playerId) {
         Preconditions.checkNotNull(pbfId);
         Preconditions.checkNotNull(playerId);
 
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
         return pbf.getPlayers().stream().filter(p -> p.getPlayerId().equals(playerId))
                 .findFirst().orElseThrow(PlayerAction::cannotFindPlayer)
                 .getTechsChosen();
@@ -578,10 +546,9 @@ public class PlayerAction extends BaseAction {
      * Returns the id to the player created
      *
      * @return the id of the newly created player
-     * @throws PlayerExistException - Throws this exception if username already exists
      */
     @SneakyThrows
-    public String createPlayer(String usernameEncoded, String passwordEncoded, String emailEncoded) throws PlayerExistException {
+    public String createPlayer(String usernameEncoded, String passwordEncoded, String emailEncoded) {
         Preconditions.checkNotNull(usernameEncoded);
         Preconditions.checkNotNull(passwordEncoded);
         Preconditions.checkNotNull(emailEncoded);
@@ -591,7 +558,7 @@ public class PlayerAction extends BaseAction {
         String password = URLDecoder.decode(passwordEncoded, "UTF-8");
 
         if (CivSingleton.instance().playerCache().asMap().containsValue(username)) {
-            throw new PlayerExistException();
+            throw new BadRequestException();
         }
 
         Player player = new Player();
@@ -600,34 +567,24 @@ public class PlayerAction extends BaseAction {
 
         player.setPassword(DigestUtils.sha1Hex(decodedPassword));
         player.setEmail(email);
-        WriteResult<Player, String> insert = playerCollection.insert(player);
-        log.info(String.format("Saving player with id %s", insert.getSavedId()));
-        return insert.getSavedId();
+        Player insert = playerRepository.insert(player);
+        return insert.getId();
     }
 
     public void newPassword(String username, String newPass) throws Exception {
-        Player player = playerCollection.findOne(DBQuery.is(Player.USERNAME, username));
-        if (player == null) {
-            throw new WebApplicationException(Response.Status.BAD_REQUEST);
-        }
-
-        String password = URLDecoder.decode(newPass, "UTF-8");
+        Player player = playerRepository.findOneByUsername(username).orElseThrow(BadRequestException::new);
+        String password = URLDecoder.decode(newPass, StandardCharsets.UTF_8);
         player.setPassword(DigestUtils.sha1Hex(password));
-        playerCollection.updateById(player.getId(), player);
+        playerRepository.save(player);
     }
 
     public boolean newPassword(ForgotpassDTO forgotpassDTO) {
         Preconditions.checkNotNull(forgotpassDTO.getEmail());
         Preconditions.checkNotNull(forgotpassDTO.getNewpassword());
 
-        Player player = playerCollection.findOne(DBQuery.is(Player.EMAIL, forgotpassDTO.getEmail()));
-        if (player == null) {
-            log.error("Couldn't find user by email " + forgotpassDTO.getEmail());
-            throw new WebApplicationException(Response.Status.NOT_FOUND);
-        }
-
+        Player player = playerRepository.findOneByEmail(forgotpassDTO.getEmail()).orElseThrow(NotFoundException::new);
         player.setNewPassword(forgotpassDTO.getNewpassword());
-        playerCollection.updateById(player.getId(), player);
+        playerRepository.save(player);
         return SendEmail.sendMessage(player.getEmail(),
                 "Please verify your email",
                 "Your password was requested to be changed. If you want to change your password then please press this link: "
@@ -635,18 +592,13 @@ public class PlayerAction extends BaseAction {
     }
 
     public boolean verifyPassword(String playerId) {
-        Player player = playerCollection.findOneById(playerId);
-        if (player != null && !Strings.isNullOrEmpty(player.getNewPassword())) {
-            try {
-                String password = URLDecoder.decode(player.getNewPassword(), "UTF-8");
-                player.setPassword(DigestUtils.sha1Hex(password));
-                player.setNewPassword(null);
-                playerCollection.updateById(player.getId(), player);
-                return true;
-            } catch (UnsupportedEncodingException e) {
-                log.error("Couldn't write password ", e);
-                throw new WebApplicationException(Response.Status.BAD_REQUEST);
-            }
+        Player player = playerRepository.findById(playerId).orElseThrow(NotFoundException::new);
+        if (!Strings.isNullOrEmpty(player.getNewPassword())) {
+            String password = URLDecoder.decode(player.getNewPassword(), StandardCharsets.UTF_8);
+            player.setPassword(DigestUtils.sha1Hex(password));
+            player.setNewPassword(null);
+            playerRepository.save(player);
+            return true;
         }
 
         return false;
@@ -656,10 +608,10 @@ public class PlayerAction extends BaseAction {
         Preconditions.checkNotNull(pbfId);
         Preconditions.checkNotNull(socialPolicyName);
 
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
         if (!SecurityCheck.hasUserAccess(pbf, playerId)) {
             log.error("User with id " + playerId + " has no access to pbf " + pbf.getName());
-            throw new WebApplicationException(Response.Status.FORBIDDEN);
+            throw new ForbiddenException();
         }
 
         Optional<SocialPolicy> socialPolicyOptional = pbf.getSocialPolicies().stream()
@@ -676,7 +628,7 @@ public class PlayerAction extends BaseAction {
 
         if (playerhand.getSocialPolicies().stream().anyMatch(sp -> sp.getName().equals(socialPolicy.getFlipside()))) {
             log.warn("Player with id " + playerId + " tried to add a social policy on same flipside");
-            throw new WebApplicationException(Response.Status.BAD_REQUEST);
+            throw new BadRequestException();
         }
 
         SocialPolicy sp = new SocialPolicy(socialPolicyName);
@@ -686,7 +638,7 @@ public class PlayerAction extends BaseAction {
 
         playerhand.getSocialPolicies().add(sp);
 
-        pbfCollection.updateById(pbf.getId(), pbf);
+        pbfRepository.save(pbf);
         log.debug("Player " + playerId + " chose social policy " + sp.getName());
 
         return super.createLog(sp, pbfId, GameLog.LogType.SOCIAL_POLICY, playerId);
@@ -695,7 +647,7 @@ public class PlayerAction extends BaseAction {
     public List<AllTechsDTO> getTechsForAllPlayers(String pbfId) {
         Preconditions.checkNotNull(pbfId);
 
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
         return pbf.getPlayers().stream()
                 .filter(p -> p.getCivilization() != null)
                 .map(p -> new AllTechsDTO(p.getCivilization().getName(), p.getColor(),
@@ -710,9 +662,9 @@ public class PlayerAction extends BaseAction {
         Preconditions.checkNotNull(pbfId);
         Preconditions.checkNotNull(playerId);
 
-        PBF pbf = pbfCollection.findOneById(pbfId);
+        PBF pbf = pbfRepository.findById(pbfId).orElseThrow(NotFoundException::new);
         Playerhand playerhand = getPlayerhandByPlayerId(playerId, pbf);
         playerhand.setGamenote(messageDTO.getMessage());
-        pbfCollection.updateById(pbfId, pbf);
+        pbfRepository.save(pbf);
     }
 }
